cluster/apps/default/netbootxyz/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: default
  labels:
    app: netbootxyz
spec:
  type: LoadBalancer
  loadBalancerIP: "172.16.38.206"
  externalTrafficPolicy: Local
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: web-config
    - port: 69
      targetPort: 69
      protocol: UDP
      name: tftp
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: nginx
  selector:
    app: netbootxyz
